# az_crew_change

signon_crew/: README.md  pyproject.toml
signon_crew/src/signon_crew/: crew.py  main.py
signon_crew/src/signon_crew/config/: agents.yaml  tasks.yaml
signon_crew/src/signon_crew/tools/: Fetch_vessel.py  crew_onboard.py  crew_replace.py
